testdata/baselines/reference/submodule/conformance/jsdocTemplateTag8.errors.txt
a.js(8,11): error TS2304: Cannot find name 'Covariant'.
a.js(13,11): error TS2304: Cannot find name 'Covariant'.
a.js(27,11): error TS2304: Cannot find name 'Contravariant'.
a.js(29,33): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(32,11): error TS2304: Cannot find name 'Contravariant'.
a.js(34,31): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(46,11): error TS2304: Cannot find name 'Invariant'.
a.js(48,29): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(51,11): error TS2304: Cannot find name 'Invariant'.
a.js(53,27): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(62,12): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== a.js (11 errors) ====
    /**
     * @template out T
     * @typedef {Object} Covariant
     * @property {T} x
     */
    
    /**
     * @type {Covariant<unknown>}
              ~~~~~~~~~
!!! error TS2304: Cannot find name 'Covariant'.
     */
    let super_covariant = { x: 1 };
    
    /**
     * @type {Covariant<string>}
              ~~~~~~~~~
!!! error TS2304: Cannot find name 'Covariant'.
     */
    let sub_covariant = { x: '' };
    
    super_covariant = sub_covariant;
    sub_covariant   = super_covariant; // Error
    
    /**
     * @template in T
     * @typedef {Object} Contravariant
     * @property {(x: T) => void} f
     */
    
    /**
     * @type {Contravariant<unknown>}
              ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Contravariant'.
     */
    let super_contravariant = { f: (x) => {} };
                                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    /**
     * @type {Contravariant<string>}
              ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Contravariant'.
     */
    let sub_contravariant = { f: (x) => {} };
                                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    super_contravariant = sub_contravariant;  // Error
    sub_contravariant = super_contravariant;
    
    /**
     * @template in out T
     * @typedef {Object} Invariant
     * @property {(x: T) => T} f
     */
    
    /**
     * @type {Invariant<unknown>}
              ~~~~~~~~~
!!! error TS2304: Cannot find name 'Invariant'.
     */
    let super_invariant = { f: (x) => {} };
                                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    /**
     * @type {Invariant<string>}
              ~~~~~~~~~
!!! error TS2304: Cannot find name 'Invariant'.
     */
    let sub_invariant = { f: (x) => { return "" } };
                              ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    super_invariant = sub_invariant;  // Error
    sub_invariant = super_invariant;  // Error
    
    /**
     * @template in T
     * @param {T} x
     */
    function f(x) {}
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    